= Package NNbenchmark =
- Akshaj Verma, Salabila Mahdi, Patrice Kiener
- Christophe Dutang, John Nash 


NNbenchmark 2.3.4 - 2019-08-21 - sent to CRAN
=============================================
- DESCRIPTION: Modify the title to match title case recommanded by CRAN

NNbenchmark 2.3.3 - 2019-08-21
==============================
- DESCRIPTION: Modify the title 
- All files: Add value to Rd files (return in roxygen comments) for every functions

NNbenchmark 2.3.2 - 2019-08-20
==============================
- prepareZZ: extend donttest to run examples in less than 5 seconds

NNbenchmark 2.3.1 - 2019-08-20
==============================
- add2csv: examples rewritten with tempfile()
- datalist rewritten with format (file_without_ext: obj1, ..., objn)
- use for this purpose the hidden function tools:::list_data_in_pkg()

NNbenchmark 2.3 - 2019-08-19
============================
- NNdatasets: Change uNeuroOne from 3 to 2 neurons and 10 to 7 parameters
- NNdatasets: mRef153: correct a typo in the number of neurons (from 4 to 3)
- u+mNNdatasets: Update the documentation with the number of parameters for each dataset
- prepareZZ: rearrange the examples with donttest to run less than 5 seconds
- DESCRIPTION: Yifu Yan as author of the timeR function + class (timeR package)
- Test CRAN check and prepare the upload to CRAN

NNbenchmark 2.2 - 2019-08-13
============================
- NNdataSummary()

NNbenchmark 2.1.1 - 2019-08-13
==============================
- clearNN() donotdetach now includes kableExtra, dplyr, stringr

NNbenchmark 2.1 - 2019-08-12
============================
- detachNN() (to move library(pkg) out of the loop in NNTemplate)

NNbenchmark 2.0.1 - 2019-08-04
==============================
- Date 2019-08-04 added at the first line of *.R files
- Linked to GitHub. Package is rebuilt before commit (to force change in NAMESPACE)

NNbenchmark 2.0 - 2019-08-04
============================
- column 'params' added to the timer table. Columns in the data.frame are: