@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-mDette_brnn::brnn_gaussNewton_01,13:09:13.17,13:09:13.37,0.2,1.9371,1.5336,.,.,.
-mDette_brnn::brnn_gaussNewton_02,13:09:13.40,13:09:13.59,0.19,2.0343,1.4615,.,.,.
-mDette_brnn::brnn_gaussNewton_03,13:09:13.61,13:09:13.80,0.19,2.0859,1.479,.,.,.
-mDette_brnn::brnn_gaussNewton_04,13:09:13.82,13:09:14.06,0.24,2.004,1.4708,.,.,.
-mDette_brnn::brnn_gaussNewton_05,13:09:14.07,13:09:14.32,0.25,2.0879,1.4745,.,.,.
-mDette_brnn::brnn_gaussNewton_06,13:09:14.34,13:09:14.60,0.26,2.037,1.4506,.,.,.
-mDette_brnn::brnn_gaussNewton_07,13:09:14.61,13:09:14.88,0.27,2.0856,1.4763,.,.,.
-mDette_brnn::brnn_gaussNewton_08,13:09:14.90,13:09:15.20,0.3,2.1162,1.479,.,.,.
-mDette_brnn::brnn_gaussNewton_09,13:09:15.21,13:09:15.53,0.32,1.7346,1.4257,.,.,.
-mDette_brnn::brnn_gaussNewton_10,13:09:15.55,13:09:15.89,0.34,1.7154,1.4252,.,.,.
