@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-mFriedman_brnn::brnn_gaussNewton_01,13:09:16.57,13:09:16.82,0.25,0.0129,0.0101,.,.,.
-mFriedman_brnn::brnn_gaussNewton_02,13:09:16.84,13:09:17.04,0.2,0.0074,0.0059,.,.,.
-mFriedman_brnn::brnn_gaussNewton_03,13:09:17.06,13:09:17.29,0.23,0.0127,0.0101,.,.,.
-mFriedman_brnn::brnn_gaussNewton_04,13:09:17.30,13:09:17.55,0.25,0.0073,0.0059,.,.,.
-mFriedman_brnn::brnn_gaussNewton_05,13:09:17.56,13:09:17.82,0.26,0.0073,0.0058,.,.,.
-mFriedman_brnn::brnn_gaussNewton_06,13:09:17.83,13:09:18.11,0.28,0.0176,0.0127,.,.,.
-mFriedman_brnn::brnn_gaussNewton_07,13:09:18.13,13:09:18.42,0.29,0.0121,0.0096,.,.,.
-mFriedman_brnn::brnn_gaussNewton_08,13:09:18.44,13:09:18.76,0.32,0.0074,0.0059,.,.,.
-mFriedman_brnn::brnn_gaussNewton_09,13:09:18.77,13:09:19.11,0.34,0.0128,0.0101,.,.,.
-mFriedman_brnn::brnn_gaussNewton_10,13:09:19.13,13:09:19.49,0.36,0.0129,0.0102,.,.,.
