@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-mIshigami_brnn::brnn_gaussNewton_01,13:09:20.11,13:09:20.42,0.31,0.7227,0.5295,.,.,.
-mIshigami_brnn::brnn_gaussNewton_02,13:09:20.43,13:09:20.69,0.26,0.6669,0.5124,.,.,.
-mIshigami_brnn::brnn_gaussNewton_03,13:09:20.70,13:09:20.98,0.28,0.6735,0.5123,.,.,.
-mIshigami_brnn::brnn_gaussNewton_04,13:09:20.99,13:09:21.28,0.29,2.608,2.2578,.,.,.
-mIshigami_brnn::brnn_gaussNewton_05,13:09:21.30,13:09:21.62,0.32,0.6364,0.4834,.,.,.
-mIshigami_brnn::brnn_gaussNewton_06,13:09:21.63,13:09:21.99,0.36,0.6867,0.5202,.,.,.
-mIshigami_brnn::brnn_gaussNewton_07,13:09:22.00,13:09:22.37,0.37,0.755,0.5498,.,.,.
-mIshigami_brnn::brnn_gaussNewton_08,13:09:22.38,13:09:22.77,0.39,2.592,2.247,.,.,.
-mIshigami_brnn::brnn_gaussNewton_09,13:09:22.78,13:09:23.18,0.4,0.6645,0.5062,.,.,.
-mIshigami_brnn::brnn_gaussNewton_10,13:09:23.19,13:09:23.63,0.44,0.6996,0.5278,.,.,.
