@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-uDmod1_brnn::brnn_gaussNewton_01,13:09:25.32,13:09:25.34,0.02,0.0452,0.0365,.,.,.
-uDmod1_brnn::brnn_gaussNewton_02,13:09:25.34,13:09:25.35,0.01,0.5884,0.5069,.,.,.
-uDmod1_brnn::brnn_gaussNewton_03,13:09:25.35,13:09:25.38,0.03,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_04,13:09:25.38,13:09:25.40,0.02,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_05,13:09:25.41,13:09:25.42,0.01,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_06,13:09:25.43,13:09:25.45,0.02,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_07,13:09:25.45,13:09:25.47,0.02,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_08,13:09:25.47,13:09:25.48,0.01,0.5884,0.5069,.,.,.
-uDmod1_brnn::brnn_gaussNewton_09,13:09:25.48,13:09:25.50,0.02,0.0451,0.0364,.,.,.
-uDmod1_brnn::brnn_gaussNewton_10,13:09:25.50,13:09:25.53,0.03,0.0587,0.0433,.,.,.
