@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-uDmod2_brnn::brnn_gaussNewton_01,13:09:25.87,13:09:25.89,0.02,0.0666,0.0536,.,.,.
-uDmod2_brnn::brnn_gaussNewton_02,13:09:25.89,13:09:25.91,0.02,0.2702,0.2373,.,.,.
-uDmod2_brnn::brnn_gaussNewton_03,13:09:25.92,13:09:25.94,0.02,0.2591,0.23,.,.,.
-uDmod2_brnn::brnn_gaussNewton_04,13:09:25.94,13:09:25.98,0.04,0.1639,0.1351,.,.,.
-uDmod2_brnn::brnn_gaussNewton_05,13:09:25.98,13:09:25.99,0.01,0.067,0.0543,.,.,.
-uDmod2_brnn::brnn_gaussNewton_06,13:09:25.99,13:09:26.01,0.02,0.0435,0.0346,.,.,.
-uDmod2_brnn::brnn_gaussNewton_07,13:09:26.01,13:09:26.03,0.02,0.0435,0.0346,.,.,.
-uDmod2_brnn::brnn_gaussNewton_08,13:09:26.04,13:09:26.05,0.01,0.0666,0.0536,.,.,.
-uDmod2_brnn::brnn_gaussNewton_09,13:09:26.05,13:09:26.07,0.02,0.0673,0.0522,.,.,.
-uDmod2_brnn::brnn_gaussNewton_10,13:09:26.07,13:09:26.09,0.02,0.0666,0.0536,.,.,.
