@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-uGauss1_brnn::brnn_gaussNewton_01,13:09:27.58,13:09:27.62,0.04,2.2526,1.7489,.,.,.
-uGauss1_brnn::brnn_gaussNewton_02,13:09:27.62,13:09:27.66,0.04,7.2627,5.2187,.,.,.
-uGauss1_brnn::brnn_gaussNewton_03,13:09:27.66,13:09:27.69,0.03,2.2526,1.7489,.,.,.
-uGauss1_brnn::brnn_gaussNewton_04,13:09:27.69,13:09:27.72,0.03,2.2526,1.7489,.,.,.
-uGauss1_brnn::brnn_gaussNewton_05,13:09:27.73,13:09:27.76,0.03,6.7475,4.8014,.,.,.
-uGauss1_brnn::brnn_gaussNewton_06,13:09:27.76,13:09:27.78,0.02,2.2526,1.7489,.,.,.
-uGauss1_brnn::brnn_gaussNewton_07,13:09:27.78,13:09:27.82,0.04,4.96,3.7125,.,.,.
-uGauss1_brnn::brnn_gaussNewton_08,13:09:27.82,13:09:27.85,0.03,2.2811,1.7839,.,.,.
-uGauss1_brnn::brnn_gaussNewton_09,13:09:27.85,13:09:27.90,0.05,2.4356,1.8639,.,.,.
-uGauss1_brnn::brnn_gaussNewton_10,13:09:27.90,13:09:27.92,0.02,2.2434,1.7295,.,.,.
