@@ -1,11 +1,0 @@
-event,start,end,duration,RMSE,MAE,stars,params,comment
-uNeuroOne_brnn::brnn_gaussNewton_01,13:09:29.96,13:09:29.97,0.01,0.276,0.2257,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_02,13:09:29.97,13:09:29.98,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_03,13:09:29.98,13:09:29.99,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_04,13:09:29.99,13:09:30.00,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_05,13:09:30.00,13:09:30.00,0,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_06,13:09:30.00,13:09:30.01,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_07,13:09:30.02,13:09:30.02,0,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_08,13:09:30.02,13:09:30.03,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_09,13:09:30.03,13:09:30.04,0.01,0.2755,0.2241,.,.,.
-uNeuroOne_brnn::brnn_gaussNewton_10,13:09:30.27,13:09:30.28,0.01,0.2735,0.2216,.,.,.
